contacts/k8s/kustomize/overlays/prod/web/contacts-web-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: contacts-web
spec:
  type: NodePort
  selector: 
    app: contacts-web
    component: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30011
