contacts/k8s/kustomize/overlays/prod/web/contacts-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-app-ingress
  namespace: prod-contacts-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-contacts-web
            port:
              number: 80
